apps/computer-vision/object-detection/onprem/pipeline/resource_monitor/prometheus-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - method:
        exact: GET
      uri:
        prefix: "/prometheus"
    rewrite:
      uri: /graph
    route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
  - match:
    - uri:
        prefix: "/static/vendor/"
    - uri:
        prefix: "/static/js/graph/"
    - uri:
        prefix: "/api/v1/"
    - uri:
        regex: '^.*\.(ico|png|jpg)$'
    route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
